delegation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-delegation-nginx
  namespace: synapse
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, HEAD, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Origin, X-Requested-With, Content-Type, Accept, Authorization"
spec:
  ingressClassName: nginx
  rules:
  - host: example.org
    http:
      paths:
      - pathType: Prefix
        path: /.well-known/matrix/
        backend:
          service:
            name: delegation-service
            port:
              number: 80
  tls:
  - hosts:
    - example.org
